...
        android:text="@string/height_prompt"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/prompt_top_margin"
        android:layout_marginStart="@dimen/prompt_left_margin"/>

    <EditText
        android:id="@+id/et_height_feet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tv_prompt"
        android:layout_alignBottom="@id/tv_prompt"
        android:inputType="number"
        android:hint="@string/num_hint"
...
        android:text="@string/feet_units"
        android:layout_marginTop="@dimen/prompt_top_margin"
        android:layout_toEndOf="@id/et_height_feet"
        android:layout_alignBaseline="@id/et_height_feet" />

    <EditText
        android:id="@+id/et_height_remainder_inches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tv_feet"
        android:layout_alignBottom="@id/tv_prompt"
        android:inputType="numberDecimal"
        android:hint="@string/num_hint"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inch_units"
        android:layout_toEndOf="@id/et_height_remainder_inches"
        android:layout_alignBaseline="@id/et_height_remainder_inches" />
    <Button
        android:id="@+id/btn_height_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_btn_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_below="@id/tv_prompt" />
...
